<resources>
    <string name="app_name">srolqs</string>

    // Login Activity
    <string name="srlqs_logo">SROL-QS</string>
    <string name="title_login">Selamat Datang di Self Regulated Online Learning Questionnaire System!</string>
    <string name="subtitle_login">Masuk kembali ke akunmu</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="button_login">Log In</string>
    <string name="login_question">Belum memiliki akun?</string>
    <string name="register_button_text">Daftarkan Akun</string>

    // Welcome Activity
    <string name="welcome_student">Pelajar</string>
    <string name="welcome_teacher">Pengajar</string>
    <string name="welcome_text">Selamat datang! Silahkan pilih peran Anda terlebih dahulu untuk menggunakan aplikasi</string>

    // Register Activity
    <string name="fill_details_below">Isi detail informasi di bawah ini untuk membuat akun</string>
    <string name="register_name_field">Nama</string>
    <string name="email_label">Email</string>
    <string name="register_name_hint">Masukkan nama anda</string>
    <string name="register_email_hint">Masukkan alamat email akun anda</string>
    <string name="dob_label">Tanggal lahir</string>
    <string name="register_dob_hint">Pilih tanggal lahir anda</string>
    <string name="calendar_icon_description">Calendar</string>
    <string name="university_label">Universitas</string>
    <string name="register_university_hint">Masukkan nama universitas anda</string>
    <string name="batch_label">Angkatan</string>
    <string name="register_batch_hint">Pilih tahun angkatan anda</string>
    <string name="dropdown_icon_description">dropdown batch</string>
    <string name="degree_label">Gelar</string>
    <string name="register_degree_hint">Pilih gelar yang sedang and tempuh</string>
    <string name="password_label">Kata sandi</string>
    <string name="register_password_hint">Masukkan kata sandi akun anda</string>
    <string name="register_password_confirm_hint">Masukkan kembali kata sandi akun anda</string>
    <string name="register_npm_hint">Masukkan NPM/NIM Anda</string>
    <string name="register_npm_field">Nomor Identitas Mahasiswa</string>
    <string name="title_home">Beranda</string>
    <string name="title_scan_qr">Scan QR</string>
    <string name="title_profile">Profil</string>
    <string name="title_mata_kuliah">Mata Kuliah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_here"><u>Daftar disini</u></string>
    <string name="forgot_password"><u>Lupa Password</u></string>
    <string name="password_confirm_label">Konfirmasi kata sandi</string>

    // Goal setting Activity
    <string name="goal_setting_indicator">1 dari 6</string>
    <string name="goal_setting_title">Goal Settings</string>
    <string name="info_icon">Info icon</string>
    <string name="goal_setting_q1">Saya membuat target untuk pengerjaan tugas-tugas saya dalam perkuliahan online.</string>
    <string name="tidak_setuju_str">Sangat Tidak Setuju</string>
    <string name="str_1">1</string>
    <string name="str_2_scale">2</string>
    <string name="str_3_scale">3</string>
    <string name="str_4_scale">4</string>
    <string name="str_5_scale">5</string>
    <string name="str_6_scale">6</string>
    <string name="sangat_setuju_str">Sangat Setuju</string>
    <string name="goal_setting_progress_indicator">4 dari 24 pertanyaan</string>
    <string name="str_next_button">Selanjutnya</string>
    <string name="goal_setting_q2">2. Saya menetapkan tujuan jangka pendek (harian atau mingguan) yang ingin saya capai dalam perkuliahan online.</string>
    <string name="goal_setting_q3">3.Saya menetapkan standar yang tinggi untuk pembelajaran saya di perkuliahan online.</string>
    <string name="goal_setting_q4">4.Saya menetapkan tujuan jangka panjang (bulanan atau semester) yang ingin saya capai dalam perkuliahan online.</string>

    // Environment Structuring
    <string name="environment_structuring_indicator">2 dari 6</string>
    <string name="environment_structuring_title">Environment Structuring</string>
    <string name="environment_structuring_q5">5. Saya dapat memilih lokasi belajar yang tepat dalam perkuliahan online untuk menghindari terlalu banyak gangguan.</string>
    <string name="environment_structuring_q6">6. Saya menutup semua tab atau window yang tidak terkait dengan materi perkuliahan saat sedang mengikuti pembelajaran dalam perkuliahan online.</string>
    <string name="environment_structuring_q7">7. Saya tahu di mana saya bisa belajar paling efektif untuk perkuliahan online</string>
    <string name="environment_structuring_q8">8. Saya memilih waktu belajar yang memiliki paling sedikit gangguan dalam perkuliahan online.</string>
    <string name="environment_structuring_progress_indicator">8 dari 24 pertanyaaan</string>
    <string name="str_prev_button">Kembali</string>

    // Task Strategies
    <string name="task_strategies_indicator">3 dari 6</string>
    <string name="task_strategies_title">Task Strategies</string>
    <string name="task_strategies_q9">9. Saya tidak memiliki strategi khusus untuk menyelesaikan tugas-tugas dalam perkuliahan online.</string>
    <string name="task_strategies_q10">10. Saya membuat strategi pengerjaan tugas-tugas dalam perkuliahan online.</string>
    <string name="task_strategies_q11">11. Saya mempersiapkan pertanyaan yang akan saya ajukan sebelum bergabung di forum diskusi atau chat room.</string>
    <string name="task_strategies_q12">12.Saya mengerjakan hal-hal tambahan dalam perkuliahan online selain yang ditugaskan kepada saya untuk menguasai materi perkuliahan.</string>
    <string name="task_strategies_progress_indicator">12 dari 24 pertanyaan</string>

    // Time Management
    <string name="time_management_indicator">4 dari 6</string>
    <string name="time_management_title">Time Management</string>
    <string name="time_management_q13">13. Saya menetapkan jadwal yang sama setiap hari atau setiap minggu untuk belajar dalam perkuliahan online.</string>
    <string name="time_management_q14">14. Saya mengalokasikan waktu belajar tambahan untuk perkuliahan online karena saya tahu dalam belajar online diperlukan pengaturan waktu yang baik.</string>
    <string name="time_management_q15">15. Tidak ada waktu khusus yang saya alokasikan untuk belajar dalam perkuliahan online.</string>
    <string name="time_management_q16">16. Saya menentukan jumlah jam belajar yang akan saya alokasikan setiap minggunya untuk perkuliahan online.</string>
    <string name="time_management_progress_indicator">16 dari 24 pertanyaan</string>

    // Help Seeking
    <string name="help_seeking_indicator">5 dari 6</string>
    <string name="help_seeking_title">Help Seeking</string>
    <string name="help_seeking_q17">17. Saya tahu harus bertanya kepada siapa jika menemukan kesulitan saat belajar dalam perkuliahan online.</string>
    <string name="help_seeking_q18">18. Saya bertanya pada orang lain yang pernah mengikuti perkuliahan secara online mengenai cara belajar yang efektif dalam perkuliahan online.</string>
    <string name="help_seeking_q19">19. Saya menghubungi teman sekelas dalam perkuliahan online ketika menghadapi kesulitan dalam belajar</string>
    <string name="help_seeking_q20">20. Saya berbagi masalah dalam perkuliahan online dengan teman-teman sekelas sehingga kita tahu apa masalah yang dialami bersama dan bagaimana memecahkan masalah tersebut.</string>
    <string name="help_seeking_progress_indicator">20 dari 24 pertanyaan</string>

    // Self Evaluation
    <string name="self_evaluation_indicator">6 dari 6</string>
    <string name="self_evaluation_title">Self-Evaluation</string>
    <string name="self_evaluation_q21">21. Saya mengevaluasi sejauh mana pemahaman saya mengenai materi pembelajaran dalam perkuliahan online yang saya ikuti.</string>
    <string name="self_evaluation_q22">22. Saya berkomunikasi dengan teman sekelas saya untuk mencari tahu apakah yang saya pahami berbeda dengan yang mereka pahami.</string>
    <string name="self_evaluation_q23">23. Saya melakukan evaluasi apakah strategi pembelajaran yang saya gunakan mampu mencapai target yang sudah saya tetapkan di awal perkuliahan online.</string>
    <string name="self_evaluation_q24">24. Di tengah semester, saya merefleksikan kembali apakah strategi pembelajaran yang saya gunakan dalam perkuliahan online sudah tepat.</string>
    <string name="self_evaluation_progress_indicator">24 dari 24 pertanyaan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_submit_button">Submit</string>
    <string name="course_toolbar_title">Mata Kuliah</string>
    <string name="btn_do_quesionnaire">Ukur Keterampilan SRL</string>
    <string name="heading_course_title">Nama Mata Kuliah</string>
    <string name="heading_course_description">Semester Gasal 2023/2024</string>
    <string name="course_semester_information">Semester Gasal 2024/2025</string>
    <string name="course_description">Pada mata kuliah ini akan dilakukan pengukuran keterampilan Self-Regulated Learning sebanyak 3 kali, tiap pengukuran memiliki estimasi pengisian selama 5 menit. Pengukuran ini bertujuan untuk mengevaluasi dan meningkatkan keterampilan SRL Anda dalam proses pembelajaran. Berikut adalah jadwal pengukurannya :</string>
    <string name="course_qs_periode">\u2022 Pengukuran Pertama : 1 - 7 September 2024\n\u2022 Pengukuran Kedua : 15 - 22 Oktober 2024\n\u2022 Pengukuran Ketiga : 10 - 17 Desember 2024</string>
    <string name="password_hint">\u2022 Minimal 1 huruf kapital\n\u2022 Minimal 1 angka (0-9)\n\u2022 Minimal 6 karakter</string>
    <string name="tambah_kegiatan">Tambah Kegiatan</string>
    <string name="kegiatan_name_field">Nama Kegiatan</string>
    <string name="kegiatan_name_hint">Masukkan nama kegiatan</string>
    <string name="tanggal_kegiatan_label">Tanggal Tenggat Kegiatan</string>
    <string name="tanggal_kegiatan_hint">Pilih tanggal batas tenggat kegiatan</string>
    <string name="tipe_kegiatan_label">Tipe Kegiatan</string>
    <string name="tipe_kegiatan_hint">Pilih tipe kegiatan ini</string>
    <string name="tambah_kegiatan_button_text">Tambah Kegiatan</string>
    <string name="catatan_kegiatan_field">Catatan Kegiatan</string>
    <string name="catatan_kegiatan_hint">Tulis catatan tambahan mengenai kegiatan ini</string>
    <string name="catatan_kegiatan_label">Catatan Kegiatan</string>
    <string name="link_kegiatan_label">Link Kegiatan</string>
    <string name="link_kegiatan_hint">Masukkan link atau sumber untuk kegiatan ini</string>
    <string name="edit_kegiatan">Edit Kegiatan</string>
    <string name="title_kegiatan">Kegiatan</string>
    <string name="title_nav_kegiatan">Kegiatan</string>
    <string name="searchbar_hint_kegiatan">Cari Tugas</string>
    <string name="susun_kegiatan">Susun Kegiatan</string>
    <string name="no_activities_available">Belum ada kegiatan terdaftar</string>
    <string name="belum_ada_kegiatan_terdaftar">Belum ada kegiatan terdaftar</string>
    <string name="delete_kegiatan">Delete Kegiatan</string>
    <string name="title_tanggal">Tanggal</string>
    <string name="title_tipe">Tipe</string>
    <string name="title_catatan">Catatan</string>
    <string name="title_link">Link</string>
    <string name="title_aksi">Aksi</string>
    <string name="edit">Edit</string>
    <string name="daftar_mata_kuliah">Daftar Mata Kuliah</string>
    <string name="no_class_available">Belum ada mata kuliah terdaftar</string>
    <string name="str_mata_kuliah_kosong">Belum ada mata kuliah terdaftar</string>
    <string name="register_next_text">Selanjutnya</string>
    <string name="password_reccomendation">Pastikan password anda terdiri dari 8 karakter, minimal 1 karakter huruf kapital dan 1 karakter numerik</string>
</resources>